adding helm charts deployment in kind - added helm charts - files endpoint - reset endpoint - deployment in kind

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,4 +15,4 @@ FROM alpine:latest AS runner
 
 WORKDIR /bin
 COPY --from=builder /go/bin/fls-interpreter .
-ENTRYPOINT ["fls-interpreter"]
+ENTRYPOINT ["fls-interpreter", "--mode=server"]
